--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,22 +1,19 @@
 {
   "compilerOptions": {
+    "target": "ES2020", // Moderno y compatible con Node 16+
+    "module": "commonjs", // Ideal para proyectos con Express
     "rootDir": "./src",
     "outDir": "./dist",
-    "module": "commonjs",
-    "target": "es2020",
-    "types": [],
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
-    "esModuleInterop": true,
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-    "strict": true,
-    "jsx": "react-jsx",
-    "verbatimModuleSyntax": true,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
-    "skipLibCheck": true,
-  }
+    "esModuleInterop": true, // Permite importar módulos CommonJS fácilmente
+    "strict": true, // Activa las validaciones más importantes
+    "noImplicitAny": true, // No permite variables sin tipo
+    "noUnusedLocals": true, // Detecta variables locales sin usar
+    "resolveJsonModule": true // Permite importar archivos .json
+  },
+  "include": [
+    "src/**/*"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
